<resources>
    <string name="app_name">monitorApp</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="options">optionsDropDown</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="registerStr"><b>Register</b></string>
    <string name="createNewAccount"><b>Create New Account</b></string>
    <string name="forgotPasswordStr"><b>Forgot Password</b></string>
    <string name="usernameHint">Username</string>
    <string name="emailHint">E-mail</string>
    <string name="currentPasswordHint">Current Password</string>
    <string name="passwordHint">Password</string>
    <string name="passwordNewHint">New Password</string>
    <string name="passwordConfirmHint">Confirm password</string>
    <string name="loginStr"><b>Login</b></string>

    <dimen name="inputTopMargin">14dp</dimen>
    <dimen name="inputTopMarginLogin">26dp</dimen>
    <dimen name="inputTopMarginLoginButton">56dp</dimen>
    <dimen name="inputTextSize">27sp</dimen>
    <dimen name="inputLeftRightMargin">20dp</dimen>
    <dimen name="infomrationTextSize">20sp</dimen>

    <string name="exampleText">Hej! Miło mi, że wpadłeś zobaczyć Aplikację.\nInteresuję się programowanie już od szkoły średniej. \nProgramuję w takich językach jak Python, Java, C czy C++.\nW wolnej chwili lubię również posłuchać dobrej muzyki.\nJeżeli masz ochotę, mile widziany będzie feedback. :)\nInne moje projekty zobaczysz na githubie. </string>
    <string name="exampleLoremIpsumText">Neque porro quisquam est qui dolorem \nipsum quia dolor sit amet, consectetur, adipisci \nvelit.</string>
    <string name="registerConfirmationStr"><b>Confirm Your Account</b></string>
    <string name="registerConfirm">Confirm</string>
    <string name="confirmHint">Type Your Code</string>
    <string name="confirmInformation">Verification code has been sent to your e-mail. Please insert your code to verify your account.</string>
    <string name="oneMoreStep"><b>One more step</b></string>
    <string name="oneMoreStepInfo">Please make your profile photo</string>

    <string name="delayButtonLabelSecondsFormat">Delay: %d Sec</string>
    <string name="delayButtonLabelNone">Delay: None</string>
    <string name="timerCountdownMessageFormat">Taking picture in %s seconds</string>
    <string name="sign_in_message">"You successfully signed-in as %s."</string>

    <string name="date_prompt">Choose day</string>

    <string-array name="days_array">
        <item>Today</item>
        <item>Yesterday</item>
        <item>Last 7 Days</item>
        <item>Custom Date</item>
    </string-array>
    <string name="title_activity_graph_tab">GraphTabActivity</string>
    <string name="user_not_found">Username not found.</string>
    <string name="wrong_credentials">Wrong Credentials</string>

</resources>
