<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:id="@+id/loginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorBackground">

        <TextView
            android:id="@+id/loginTitleId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:gravity="center_horizontal"
            android:text="@string/loginStr"
            android:textSize="@dimen/inputTextSize"
            />

        <EditText
            android:id="@+id/inputLoginUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/inputTextSize"
            android:layout_marginLeft="@dimen/inputLeftRightMargin"
            android:layout_marginRight="@dimen/inputLeftRightMargin"
            android:layout_marginTop="100dp"
            android:inputType="text"
            android:hint="@string/usernameHint"/>

        <EditText
            android:id="@+id/inputLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/inputTextSize"
            android:inputType="textPassword"
            android:layout_marginLeft="@dimen/inputLeftRightMargin"
            android:layout_marginRight="@dimen/inputLeftRightMargin"
            android:layout_marginTop="@dimen/inputTopMarginLogin"
            android:hint="@string/passwordHint"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/inputLeftRightMargin"
            android:layout_marginRight="@dimen/inputLeftRightMargin"
            android:textSize="@dimen/inputTextSize"
            android:layout_marginTop="@dimen/inputTopMargin"
            android:text="@string/loginStr"
            android:layout_gravity="center"
            android:padding="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/inputLeftRightMargin"
            android:layout_marginRight="@dimen/inputLeftRightMargin"
            android:textSize="@dimen/inputTextSize"
            android:layout_marginTop="@dimen/inputTopMargin"
            android:weightSum="2"
            >

            <Button
                android:id="@+id/goToRegistrationButton"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="12sp"
                android:text="@string/createNewAccount"
                android:layout_gravity="center" />

            <Button
                android:id="@+id/goToForgotPassword"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="12sp"
                android:text="@string/forgotPasswordStr"
                android:layout_gravity="center"/>

        </LinearLayout>



    </LinearLayout>


</android.support.constraint.ConstraintLayout>