<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterConfirmation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:gravity="center_horizontal"
            android:text="@string/registerConfirmationStr"
            android:textSize="@dimen/inputTextSize"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/inputLeftRightMargin"
            android:layout_marginRight="@dimen/inputLeftRightMargin"
            android:layout_marginTop="@dimen/inputTopMargin"
            android:textSize="@dimen/infomrationTextSize"
            android:text="@string/confirmInformation"
            android:textAlignment="center"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputConfirmRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="47dp"
                android:layout_marginLeft="@dimen/inputLeftRightMargin"
                android:layout_marginRight="@dimen/inputLeftRightMargin">

                <EditText
                    android:id="@+id/registerConfrimEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:hint="@string/confirmHint"
                    android:textSize="@dimen/inputTextSize"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/confirmationButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registerConfirm"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="@dimen/inputLeftRightMargin"
                android:layout_marginRight="@dimen/inputLeftRightMargin"
                android:padding="14dp"
                android:textSize="@dimen/inputTextSize"/>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
