<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:gravity="center_horizontal"
            android:text="@string/registerStr"
            android:textSize="@dimen/inputTextSize"
            />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="@dimen/inputLeftRightMargin"
            android:layout_marginRight="@dimen/inputLeftRightMargin">
            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="@string/usernameHint"
                android:textSize="@dimen/inputTextSize"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/inputTopMargin"
            android:layout_marginLeft="@dimen/inputLeftRightMargin"
            android:layout_marginRight="@dimen/inputLeftRightMargin">
            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="@string/emailHint"
                android:textSize="@dimen/inputTextSize"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>

        <EditText
            android:id="@+id/passowrdTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/passwordHint"
            android:textSize="@dimen/inputTextSize"
            android:layout_marginTop="@dimen/inputTopMargin"
            android:layout_marginLeft="@dimen/inputLeftRightMargin"
            android:layout_marginRight="@dimen/inputLeftRightMargin"
            android:inputType="textPassword"
            />

        <EditText
            android:id="@+id/passowrdConfirmTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/passwordConfirmHint"
            android:textSize="@dimen/inputTextSize"
            android:layout_marginTop="@dimen/inputTopMargin"
            android:layout_marginLeft="@dimen/inputLeftRightMargin"
            android:layout_marginRight="@dimen/inputLeftRightMargin"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registerStr"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="@dimen/inputLeftRightMargin"
            android:layout_marginRight="@dimen/inputLeftRightMargin"
            android:padding="14dp"
            android:textSize="@dimen/inputTextSize"/>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>